--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,19 @@
+# Environment variables
+.env
+.env.local
+.env.*
+
+# Node
+node_modules/
+npm-debug.log*
 
 # Playwright
-node_modules/
 /test-results/
 /playwright-report/
-/blob-report/
 /playwright/.cache/
+/blob-report/
+/artifacts/
+
+# OS specific
+.DS_Store
+Thumbs.db
